--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,5 +1,5 @@
 @font-face {
-  font-family: Raleway;
+  font-family: "Raleway";
   font-style: normal;
   font-weight: 800;
   src: url ("fonts/raleway/raleway-800.woff2") format("woff2");
@@ -7,7 +7,7 @@
 }
 
 @font-face {
-  font-family: Rubik;
+  font-family: "Rubik";
   font-style: normal;
   font-weight: 400;
   src: url ("fonts/rubik/rubik-400.woff2") format("woff2");
@@ -15,14 +15,14 @@
 }
 
 @font-face {
-  font-family: Rubik;
+  font-family: "Rubik";
   font-style: normal;
   font-weight: 700;
   src: url ("fonts/rubik/rubik-700.woff2") format("woff2");
 }
 
 header {
-  font-family: Rubik;
+  font-family: "Rubik";
   font-size: 16px;
   line-height: 24px;
 }
