--- a/styles/styles.css
+++ b/styles/styles.css
@@ -21,8 +21,82 @@
   src: url ("fonts/rubik/rubik-700.woff2") format("woff2");
 }
 
-header {
+body {
   font-family: "Rubik";
+  font-size: 18px;
+  line-height: 30px;
+  color: #000000 ;
+  background-color: #ffffff;
+}
+
+.page-header {
+  color: #000000;
+  background-color: #FFE17F;
+}
+
+.navigation-main a {
+  color: #000000;
+  text-decoration: none;
+}
+
+.navigation-user a {
+  color: #000000;
+  text-decoration: none;
+}
+
+.main-goods-item {
+  background-color: #FFE17F;
+}
+
+.main-goods-item a {
+  color: #000000;
+  text-decoration: none;
+}
+
+.services-slider-wrap {
+  background-color: #F0F0F0;
+}
+
+.rare.product {
+  background-color: #F0F0F0;
+}
+
+.subscribe {
+  background-color: #F0F0F0;
+}
+
+.page-footer {
+  background-color: #444444;
+  color: #ffffff;
+}
+
+.page-footer-link {
+  color: #ffffff;
+  text-decoration: none;
+}
+
+.navigation-main {
+  font-family: "Raleway";
+  font-weight: 800;
+  font-style: normal;
+  font-size: 18px;
+  line-height: 21.13px;
+  text-transform: uppercase;
+}
+
+.sub-menu-item {
+  font-family: "Rubik";
+  font-weight: 400;
   font-size: 16px;
-  line-height: 24px;
+  line-height: 18px;
+  text-transform: none;
+
+}
+
+.navigation-link {
+font-family: 'Rubik';
+font-style: normal;
+font-weight: 400;
+font-size: 18px;
+line-height: 30px;
 }
