--- a/styles/styles.css
+++ b/styles/styles.css
@@ -40,6 +40,7 @@
  }
 
  body {
+   box-sizing: border-box;
    margin: 0;
    display: flex;
    flex-direction: column;
@@ -55,6 +56,7 @@
  /* Header */
 
  .page-header {
+   box-sizing: border-box;
    display: flex;
    width: 1160px;
    min-height: 300px;
@@ -64,6 +66,7 @@
  }
 
  .page-header-container {
+   box-sizing: border-box;
    margin: 0 auto;
    display: flex;
    flex-direction: column;
@@ -78,15 +81,34 @@
    margin-bottom: 30px;
  }
 
- .navigation-search {
-   display: flex;
-   width: 1040px;
+ .logo:hover {
+   opacity: 0.6;
+ }
+
+ .logo:active {
+   opacity: 0.3;
+ }
+
+ .logo:focus-visible {
+   outline: 2px solid #AF4FFF;
  }
 
  .navigation-search-container {
+   box-sizing: border-box;
+   display: flex;
+   width: 1040px;
+   min-height: 40px;
+   justify-content: space-between;
+ }
+
+ .navigation-search {
    display: flex;
    width: 517px;
-   justify-content: space-between;
+ }
+
+ .navigation-form {
+   display: flex;
+   width: 517px;
  }
 
  .navigation-form-input {
@@ -95,9 +117,24 @@
    border-radius: 50px 0 0 50px;
    background-color: #FFE17F;
    border-color: #000000;
+   padding-left: 48px;
+   border: solid 2px #000000;
  }
 
+ /* .navigation-form-button::before {
+   content: "";
+   display: block;
+   width: 17px;
+   height: 17px;
+   background-image: url(../images/header/magnifier.svg);
+   position: absolute;
+   padding-left: 0;
+   background-repeat: no-repeat;
+   transform: translateX(-344px) translateY(1px);
+ } */
+
  .navigation-form-button {
+   box-sizing: border-box;
    padding: 0;
    width: 160px;
    height: 40px;
@@ -110,7 +147,24 @@
    border-left: 0;
    background-color: #FFE17F;
    border-color: #000000;
+   position: relative;
+   cursor: pointer;
  }
+
+ .navigation-form-button:hover {
+   color: #FFFFFF;
+   background-color: #000000;
+ }
+
+ .navigation-form-button:focus button::after {
+   outline: 2px solid#AF4FFF;
+
+ }
+
+ /* .navigation-form-button:active {
+   color: #FFFFFF;
+   opacity: 0.3;
+ }  */
 
  .navigation-link {
    text-decoration: none;
@@ -124,13 +178,19 @@
    font-size: 18px;
    line-height: 30px;
    display: flex;
-   width: 100%;
-   padding-top: 8px;
+   align-items: center;
+   box-sizing: border-box;
+   padding: 0;
+   margin: 0;
+   list-style-type: none;
+   width: 497px;
+   justify-content: space-between;
  }
 
  .login {
+   display: flex;
    margin-right: auto;
-   padding-left: 53px;
+   padding-left: 26px;
    position: relative;
  }
 
@@ -140,15 +200,33 @@
    width: 13px;
    height: 12px;
    background-image: url(../images/header/login.svg);
+   background-repeat: no-repeat;
    position: absolute;
-   left: 30px;
-   transform: translateY(6px);
+   left: 0;
+   transform: translateY(9px);
+ }
+
+ .login:hover {
+   opacity: 0.6;
+ }
+
+ .login:focus-visible {
+   outline: 2px solid #AF4FFF;
+ }
+
+ .login:active {
+   opacity: 0.3;
+ }
+
+ .compare-cart {
+   display: flex;
+   width: 240px;
+   justify-content: space-between;
  }
 
  .compare {
    padding-left: 22px;
    position: relative;
-   margin-right: 18px;
  }
 
  .compare::before {
@@ -159,23 +237,60 @@
    background-image: url(../images/header/compare.svg);
    position: absolute;
    left: 0;
-   transform: translateY(6px);
+   transform: translateY(7px);
+ }
+
+ .compare:hover {
+   opacity: 0.6;
+ }
+
+ .compare:focus-visible {
+   outline: 2px solid #AF4FFF;
+ }
+
+ .compare:active {
+   opacity: 0.3;
  }
 
  .cart {
-   padding-left: 44px;
+   padding-left: 28px;
    position: relative;
  }
 
  .cart::before {
    content: "";
    display: block;
-   width: 31px;
-   height: 21px;
+   width: 16px;
+   height: 14px;
    background-image: url(../images/header/cart.svg);
    position: absolute;
+   background-repeat: no-repeat;
    left: 0;
-   transform: translateY(4px);
+   transform: translateY(7px);
+ }
+
+ .cart:hover {
+   opacity: 0.6;
+ }
+
+ .cart:active {
+   opacity: 0.3;
+ }
+
+ .cart:focus-visible {
+   outline: 2px solid #AF4FFF;
+ }
+
+ .cart::after {
+   content: "";
+   display: block;
+   width: 21px;
+   height: 23px;
+   background-image: url(../images/header/cart\ number.svg);
+   position: absolute;
+   background-repeat: no-repeat;
+   left: 0;
+   transform: translateY(-27px) translateX(-15px);
  }
 
  .navigation {
@@ -196,25 +311,49 @@
    letter-spacing: 0.2em;
    text-decoration: none;
    color: #000000;
+   text-transform: uppercase;
  }
+
+ .navigation-link-two.plus {
+   padding-top: 17px;
+   padding-bottom: 13px;
+ }
+
+ .navigation-link-two:hover {
+   opacity: 0.6;
+ }
+
+ .navigation-link-two:active {
+   opacity: 0.3
+ }
+
+ .navigation-link-two:focus-visible {
+   outline: 2px solid#AF4FFF;
+ }
+
 
  .navigation-main-list {
    display: flex;
+   width: 1040px;
    list-style-type: none;
    padding: 0;
    margin: 0;
  }
 
- .navigation-link-two {
-   text-transform: uppercase;
+ .navigation-main-item:first-child {
+   margin-right: auto;
  }
 
- .menu-right {
+ .navigation-main-item:not(:first-child) {
+   margin-left: 50px;
+ }
+
+ /* .menu-right {
    display: flex;
    width: 471px;
    justify-content: space-between;
 
- }
+ } */
 
  .plus {
    padding-right: 57px;
@@ -232,11 +371,13 @@
    transform: translateY(-43px);
  }
 
- .menu-left {
+ .plus:active {}
+
+ /* .menu-left {
    display: flex;
    list-style-type: none;
    text-transform: uppercase;
- }
+ } */
 
  .sub-menu-list {
    font-family: "Rubik", Arial, sans-serif;
@@ -244,11 +385,24 @@
    font-weight: 400;
    font-size: 16px;
    line-height: 18px;
-   display: flex;
+   justify-content: space-between;
    list-style-type: none;
    padding: 0;
    margin: 0;
    margin-top: 30px;
+   width: 674px;
+   display: none;
+ }
+
+ .sub-menu-list {
+   display: none;
+   position: absolute;
+ }
+
+
+ .catalog:hover .sub-menu-list {
+   display: flex;
+   background-color: #FFC700;
  }
 
  .sub-menu-link {
@@ -259,6 +413,7 @@
    line-height: 18px;
    color: #000000;
    text-decoration: none;
+   margin-bottom: 10px;
  }
 
  .column-one {
@@ -317,7 +472,7 @@
    line-height: 50px;
    margin-bottom: 29px;
    position: relative;
-   z-index: 2;
+   z-index: 0;
  }
 
  .promo-slider-text-header::before {
@@ -329,6 +484,8 @@
    transform: translateY(-100px)translateX(300px);
    position: absolute;
    background-repeat: no-repeat;
+   z-index: -1;
+
  }
 
  .promo-slider-text-main {
@@ -346,6 +503,7 @@
  .promo-slider-button {
    display: flex;
    width: 210px;
+   height: 20px;
    justify-content: space-around;
    text-decoration: none;
    color: #000000;
@@ -357,22 +515,35 @@
    text-align: center;
    letter-spacing: 0.2em;
    text-transform: uppercase;
-   background-color: #FFE17F;
    margin-bottom: 60px;
+   position: relative;
+   z-index: 1;
+ }
+
+ .promo-slider-button::before {
+   content: "";
+   display: block;
+   width: 220px;
+   height: 8px;
+   background-image: url(../images/button.svg);
+   position: absolute;
+   z-index: -1;
+   transform: translateX(0)translateY(5px);
  }
 
  .specifications {
    display: flex;
-   justify-content: space-between;
    width: 305px;
-   height: 72px;
+   min-height: 72px;
+
  }
 
- .specifications-left {
+ /* .specifications-left {
    display: flex;
    flex-direction: column;
-   width: 141px;
+   width: 176px;
    height: 72px;
+   margin-right: 20px;
  }
 
  .specifications-right {
@@ -380,7 +551,7 @@
    flex-direction: column;
    width: 144px;
    height: 72px;
- }
+ } */
 
  .specifications-title {
    font-family: "Rubik", Arial, sans-serif;
@@ -429,80 +600,49 @@
    font-weight: 800;
    font-size: 18px;
    line-height: 24px;
-   width: 160px;
+   width: 164px;
    height: 60px;
  }
 
- .main-goods-link.vr::before {
+ .main-goods-link::before {
    content: "";
    display: block;
    width: 160px;
    height: 160px;
    background-color: #FFE17F;
-   background-image: url(../images/main-goods-list/vr.svg);
    background-repeat: no-repeat;
    background-position: center;
    margin-bottom: 33px;
+ }
+
+
+
+ .main-goods-link:hover::before   {
+  background-color: #FFC700;
+ }
+
+ .main-goods-link.vr::before {
+   background-image: url(../images/main-goods-list/vr.svg);
  }
 
  .main-goods-link.monopod::before {
-   content: "";
-   display: block;
-   width: 160px;
-   height: 160px;
-   background-color: #FFE17F;
    background-image: url(../images/main-goods-list/monopod.svg);
-   background-repeat: no-repeat;
-   background-position: center;
-   margin-bottom: 33px;
  }
 
  .main-goods-link.cam::before {
-   content: "";
-   display: block;
-   width: 160px;
-   height: 160px;
-   background-color: #FFE17F;
    background-image: url(../images/main-goods-list/actioncam.svg);
-   background-repeat: no-repeat;
-   background-position: center;
-   margin-bottom: 33px;
  }
 
  .main-goods-link.fitnes::before {
-   content: "";
-   display: block;
-   width: 160px;
-   height: 160px;
-   background-color: #FFE17F;
    background-image: url(../images/main-goods-list/fitnes.svg);
-   background-repeat: no-repeat;
-   background-position: center;
-   margin-bottom: 33px;
  }
 
  .main-goods-link.watch::before {
-   content: "";
-   display: block;
-   width: 160px;
-   height: 160px;
-   background-color: #FFE17F;
    background-image: url(../images/main-goods-list/watch.svg);
-   background-repeat: no-repeat;
-   background-position: center;
-   margin-bottom: 33px;
  }
 
  .main-goods-link.copter::before {
-   content: "";
-   display: block;
-   width: 160px;
-   height: 160px;
-   background-color: #FFE17F;
    background-image: url(../images/main-goods-list/copter.svg);
-   background-repeat: no-repeat;
-   background-position: center;
-   margin-bottom: 33px;
  }
 
  /* Service slider */
@@ -515,6 +655,11 @@
    margin: 0 auto;
    margin-top: 172px;
    margin-bottom: 70px;
+ }
+
+ .services-slider-wrap-container {
+   background-color: #F0F0F0;
+   width: 100%;
  }
 
  .service-slider-controls {
@@ -654,6 +799,7 @@
  /* About us contacts */
 
  .about-us-contacts {
+   box-sizing: border-box;
    display: flex;
    justify-content: space-between;
    margin-bottom: 70px;
@@ -722,7 +868,7 @@
    text-decoration: none;
    background: #FFE17F;
    width: 270px;
-   height: 40px;
+   height: 8px;
  }
 
  .contacts-title {
@@ -798,6 +944,11 @@
    margin-top: 70px;
  }
 
+ .subscribe-container {
+   width: 100%;
+   background-color: #F0F0F0;
+ }
+
  .subscribe-up {
    display: flex;
    flex-direction: row;
@@ -871,6 +1022,7 @@
 
  .subscribe-text.tick {
    width: 160px;
+   position: relative;
  }
 
  .tick::before {
@@ -879,7 +1031,8 @@
    background-image: url(../images/tick.svg);
    width: 14px;
    height: 14px;
-   transform: translateX(-22px) translateY(19px);
+   transform: translateX(-22px) translateY(8px);
+   position: absolute;
  }
 
  /* Footer */
@@ -891,6 +1044,11 @@
    margin: 0 auto;
    background-color: #444444;
    justify-content: space-around;
+ }
+
+ .page-footer-container {
+   background-color: #444444;
+   width: 100%;
  }
 
  .page-footer-info {
@@ -906,17 +1064,68 @@
    margin-bottom: 35px;
  }
 
+ .page-footer-logo:hover {
+   opacity: 0.6;
+ }
+
+ .page-footer-logo:active {
+   opacity: 0.3;
+ }
+
+ .page-footer-logo:focus-visible {
+   outline: 2px solid#AF4FFF;
+ }
+
  .page-footer-services {
    display: flex;
    flex-direction: column;
    width: 444px;
-   height: 123px;
+   min-height: 123px;
    margin-top: 137px;
  }
 
  .page-footer-link-block {
    display: flex;
    justify-content: space-between;
+ }
+
+ .delivery-link:hover {
+   color: #FFC700;
+   text-decoration: underline;
+ }
+
+ .delivery-link:active {
+   opacity: 0.3;
+ }
+
+ .delivery-link:focus-visible {
+   outline: 2px solid#AF4FFF;
+ }
+
+ .warranty-link:hover {
+   color: #FFC700;
+   text-decoration: underline;
+ }
+
+ .warranty-link:active {
+   opacity: 0.3;
+ }
+
+ .warranty-link:focus-visible {
+   outline: 2px solid#AF4FFF;
+ }
+
+ .contacts-link:hover {
+   color: #FFC700;
+   text-decoration: underline;
+ }
+
+ .contacts-link:active {
+   opacity: 0.3;
+ }
+
+ .contacts-link:focus-visible {
+   outline: 2px solid#AF4FFF;
  }
 
  .page-footer-social-link-block {
@@ -929,6 +1138,7 @@
    width: 175px;
    height: 116px;
    margin-top: 140px;
+   flex-direction: column;
  }
 
  .page-footer-link {
@@ -951,6 +1161,57 @@
    line-height: 20px;
    color: #FFFFFF;
  }
+
+ .page-footer-link-phone:hover {
+   color: #FFC700;
+ }
+
+ .page-footer-link-phone:active {
+   opacity: 0.3;
+ }
+
+ .page-footer-link-phone:focus-visible {
+   outline: 2px solid#AF4FFF;
+ }
+
+
+ .page-footer-link-html {
+   position: relative;
+ }
+
+ .page-footer-link-html:hover {
+   color: #ffffff;
+ }
+
+ .html-logo {
+   margin-left: auto;
+   margin-top: auto;
+ }
+
+ .html-logo:hover {
+   fill: #ffffff;
+   stroke: #FFFFFF;
+ }
+
+ .html-logo:active {
+   opacity: 0.3;
+ }
+
+ .html-logo:focus-visible {
+   outline: 2px solid#AF4FFF;
+ }
+
+ /*
+ .page-footer-link-html::after {
+   content: "";
+   display: block;
+   background-image: url(../images/html.svg);
+   width: 115px;
+   height: 33px;
+   position: absolute;
+   bottom: 0;
+   right: 0;
+ } */
 
  .page-footer-text {
    font-family: "Rubik", Arial, sans-serif;
@@ -983,14 +1244,111 @@
    text-decoration: none;
  }
 
+ .page-footer-social-link-block {
+   display: flex;
+   padding: 0;
+   margin: 0;
+   list-style-type: none;
+ }
+
+ .page-footer-social-link {
+   border-radius: 20px;
+   border-color: #000000;
+ }
+
+ .page-footer-social-link-item-telegram {
+   display: flex;
+   align-items: center;
+   justify-content: center;
+   width: 40px;
+   height: 40px;
+   border: rgba(255, 255, 255, 0.3);
+   border-radius: 30px;
+   background-color: rgba(255, 255, 255, 0.3);
+ }
+
+ .telegram-link {
+   padding: 7px;
+ }
+
+ .page-footer-social-link-item-telegram:hover {
+   background-color: #FFC700;
+ }
+
+ .telegram-link:active {
+   opacity: 0.3;
+ }
+
+ .page-footer-social-link-item-telegram:focus-visible {
+   outline: 2px solid#AF4FFF;
+ }
+
+ .page-footer-social-link-item-youtube {
+   display: flex;
+   align-items: center;
+   justify-content: center;
+   width: 40px;
+   height: 40px;
+   border: rgba(255, 255, 255, 0.3);
+   border-radius: 30px;
+   background-color: rgba(255, 255, 255, 0.3);
+ }
+
+
+ .page-footer-social-link-item-twitter {
+   display: flex;
+   align-items: center;
+   justify-content: center;
+   width: 40px;
+   height: 40px;
+   border: rgba(255, 255, 255, 0.3);
+   border-radius: 30px;
+   background-color: rgba(255, 255, 255, 0.3);
+ }
+
+
+
  /* .telegram::before {
    content: "";
    display: block;
-   background-image: url(../images/footer-stick.svg);
-   width: 80px;
-   height: 7px;
+   background-image: url(../images/telegram.svg);
+   width: 42px;
+   height: 40px;
    bottom: 0;
-   transform: translateY(64px);
+   background-repeat: no-repeat;
+   padding-bottom: 0;
+ }
+
+ .telegram:hover {
+   background-color: #FFC700;
+   border-radius: 20px;
+ }
+
+ .telegram:focus {
+   border: 2px solid #AF4FFF;
+ }
+
+
+ .youtube::before {
+   content: "";
+   display: block;
+   background-image: url(../images/youtube.svg);
+   width: 42px;
+   height: 40px;
+   padding-bottom: 0;
+   background-repeat: no-repeat;
+   margin-right: 13px;
+   margin-left: 14px;
+ }
+
+ .twitter::before {
+   content: "";
+   display: block;
+   background-image: url(../images/twitter.svg);
+   width: 42px;
+   height: 40px;
+   padding-bottom: 0;
+   background-repeat: no-repeat;
  } */
 
  /* page-catalog */
@@ -1051,10 +1409,6 @@
    transform: translateY(-13px);
  }
 
- .catalog {
-   position: relative;
- }
-
  .catalog::after {
    content: "";
    display: block;
@@ -1067,11 +1421,16 @@
    transform: translateY(-13px);
  }
 
- .catalog-container {
+ .page-catalog {
    display: flex;
-   width: 1160px;
+   width: 1440px;
    margin: 0 auto;
-   background-color:#F0F0F0;
+   background-color: #F0F0F0;
+ }
+
+ .page-catalog-container {
+   width: 100%;
+   background-color: #F0F0F0;
  }
 
  .sidebar {
@@ -1079,6 +1438,7 @@
    width: 320px;
    min-height: 1316px;
    flex-direction: column;
+   margin-top: 25px;
  }
 
  .sidebar-title {
@@ -1090,20 +1450,74 @@
    text-transform: uppercase;
    padding: 0;
    margin: 0;
+   margin-left: 200px;
  }
 
  .goods-sort {
    display: flex;
    width: 840px;
    height: 70px;
+   justify-content: space-between;
+   margin-left: 40px;
+   margin-right: 49px;
+   align-items: center;
+ }
+
+ .goods-sort-updown {
+   display: flex;
+   width: 60px;
+   height: 30px;
    justify-content: space-around;
  }
+
+ .goods-sort-title {
+   font-family: "Raleway", Arial, sans-serif;
+   font-style: normal;
+   font-weight: 800;
+   font-size: 16px;
+   line-height: 19px;
+   text-transform: uppercase;
+ }
+
+ .goods-select {
+   background-color: #F0F0F0;
+   border: 0;
+   font-family: "Rubik", Arial, sans-serif;
+   font-style: normal;
+   font-weight: 400;
+   font-size: 18px;
+   line-height: 30px;
+ }
+
 
  .goods-list {
    display: flex;
    width: 840px;
    flex-wrap: wrap;
    background-color: #FFFFFF;
+   justify-content: space-between;
+ }
+
+ .goods-container {
+   display: flex;
+   justify-content: space-evenly;
+   flex-wrap: wrap;
+   margin-top: 70px;
+ }
+
+ .goods-item-info {
+   display: flex;
+   width: 360px;
+   min-height: 40px;
+   margin-top: 32px;
+   margin-bottom: 44px;
+   justify-content: space-between;
+ }
+
+ .goods-item-title {
+   display: flex;
+   margin: 0;
+   width: 266px;
  }
 
  .button-download-more {
@@ -1131,36 +1545,35 @@
    padding-top: 8px;
  }
 
-.pagination-container {
-  display: flex;
-  width: 760px;
-  height: 71px;
-  margin: 0 auto;
-  margin-bottom: 78px;
-}
+ .pagination-container {
+   display: flex;
+   width: 760px;
+   height: 71px;
+   margin: 0 auto;
+   margin-bottom: 78px;
+ }
 
-.pagination {
-  list-style-type: none;
-  padding: 0;
-  margin: 0;
-  display: flex;
-  width: 760px;
-  height: 71px;
-  justify-content: space-between;
-  align-items: center;
-  background-color: #EBEBEB;
-  padding-left: 25px;
-  padding-right: 25px;
-}
+ .pagination {
+   list-style-type: none;
+   padding: 0;
+   margin: 0;
+   display: flex;
+   width: 760px;
+   height: 71px;
+   justify-content: space-between;
+   align-items: center;
+   background-color: #EBEBEB;
+   padding-left: 25px;
+   padding-right: 25px;
+ }
 
-.pagination-list {
-  list-style-type: none;
-  padding: 0;
-  display: flex;
-  width: 200px;
-  justify-content: space-around;
-}
-
+ .pagination-list {
+   list-style-type: none;
+   padding: 0;
+   display: flex;
+   width: 200px;
+   justify-content: space-around;
+ }
 
  .filter-title {
    font-family: "Rubik", Arial, sans-serif;
@@ -1178,14 +1591,7 @@
    line-height: 20px;
  }
 
- .goods-sort-title {
-   font-family: "Raleway", Arial, sans-serif;
-   font-style: normal;
-   font-weight: 800;
-   font-size: 16px;
-   line-height: 19px;
-   text-transform: uppercase;
- }
+
 
  .filter-button {
    font-family: "Raleway", Arial, sans-serif;
@@ -1216,7 +1622,6 @@
    line-height: 21px;
    color: #444444;
  }
-
 
  .pagination-control {
    font-family: "Raleway", Arial, sans-serif;
